--- a/project-demo/index.html
+++ b/project-demo/index.html
@@ -1,11 +1,7 @@
-wordpress hosting 36 month 6084
- web hosting   Free domain (₹ 949.00/yr value)*
- 7194
- 
- 
- 
- Maintaining a building is no small feat. It requires a keen eye for detail, a proactive approach, and a deep understanding of the various systems that keep a property running smoothly. In this guide, we’ll delve into the three critical areas of building maintenance: cleaning, electrical, and plumbing repairs, and provide you with best practices to ensure your building remains in top condition.
- 
- 
- 
- Electrical systems are the lifeblood of any building, powering everything from lighting to essential equipment. Regular inspections by certified electricians can identify potential hazards like frayed wires or overloaded circuits before they become dangerous. Implement a schedule for testing safety devices such as smoke detectors and emergency lighting to ensure they function correctly when needed.
+<html>
+<head><title>avinash</title>
+</head>
+<body>
+<h1>avinash</h1>
+</body>
+</html>
